Remove useStyle - never use inline styles

--- a/test/index.html
+++ b/test/index.html
@@ -19,8 +19,7 @@
 
   var term = new Terminal({
     cols: 80,
-    rows: 30,
-    useStyle: true
+    rows: 30
   });
 
   window.onload = function() {
